# controlpad

c-commission-engine/: .gitignore  CE-Final-List.txt  CMakeLists.txt  CommissionEngine.cpp  CommissionEngine.h  Compile.h  Compile.h.osx  ConnPool.cpp  ConnPool.h  Gemfile  Simulations.cpp  Simulations.h  Tests.h  affiliate.cpp  affiliate.h  bankaccount.cpp  bankaccount.h  ceAffiliate.cpp  ceAffiliate.h  ceApiKey.cpp  ceApiKey.h  ceBankAccount.cpp  ceBankAccount.h  ceBasicCommRule.cpp  ceBasicCommRule.h  ceBonus.cpp  ceBonus.h  ceBreakdown.cpp  ceBreakdown.h  ceCMCommRule.cpp  ceCMCommRule.h  ceCMRankRule.cpp  ceCMRankRule.h  ceCommRule.cpp  ceCommRule.h  ceCommissions.cpp  ceCommissions.h  ceExtQualify.cpp  ceExtQualify.h  ceFastStart.cpp  (+141 more)
c-commission-engine/2hour/: 1  old.chalk-2hour.sh  run-affil-sims.php
c-commission-engine/ce.dev/: accountsvalidation.php  bankaccounts.php  breakdown.php  commissionrules.php  commissiontools.php  grandpayout.php  index.php  payments.php  poolpots.php  poolrules.php  rankrules.php  receipts.php  systems.php  systemusers.php  test.php  users.php
c-commission-engine/chalk/: addrankgenbonusrules.php
c-commission-engine/codetest/: a.out  main.cpp
c-commission-engine/cron/: if-chalk-all-dies.sh  if-chalk-live-dies.sh  readme.txt
c-commission-engine/fix-test/: run-test.php  test.txt
c-commission-engine/josepp/: crypto.cpp  crypto.hpp  hmac.cpp  tools.hpp
c-commission-engine/opsy/: inc.externalqualify.php
c-commission-engine/piphany/: newplan.php  update-2018-9-27.sql
c-commission-engine/ringbomb/: update-2018-9-27.sql  (+1 more)
(+2840 files in other folders)
